<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/bottom_view"
        android:gravity="center"
        android:layout_width="match_parent"
        android:background="@drawable/abc_cab_background_top_material"
        android:padding="6dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footnote"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:clickable="true"
            android:autoLink="web"
            android:text="@string/code_url"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/bottom_view"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">


            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/label1"
                android:layout_height="wrap_content" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/label2"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/start"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btn_control"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif-light"
                android:text="@string/label3"
                android:layout_height="wrap_content" />


            <Button
                android:layout_width="wrap_content"
                android:text="@string/hide"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btn_visibility"
                android:layout_height="wrap_content" />



        </LinearLayout>
    </ScrollView>


</RelativeLayout>